Lots of test cleanup.